@@ -1,3 +1,7 @@
+2012-10-12 <fmbiete at gmail dot com>
+    BackendIMAP - AES 12+
+    * Flag support: messages can be starred in the client, and the change is reflexed in the server
+    
 2012-10-08 <fmbiete at gmail dot com>
     BackendIMAP
     * Truncation support
